[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "variantplaner"
description = "A tool kit to manage many variant on desktop computer"
authors = [{name = "Pierre Marijon", email = "pierre.marijon-ext@aphp.fr"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars[pyarrow]>=1",
    "click>=8",
    "typing-extensions>=4",
    "variantplaner-rs @ file:///${PROJECT_ROOT}/variantplaner_rs",
]

[project.urls]
Homepage = "https://natir.github.io/variantplaner"
Documentation = "https://natir.github.io/variantplaner"
Changelog = "https://natir.github.io/variantplaner/changelog"
Repository = "https://github.com/natir/variantplaner"
Issues = "https://github.com/natir/variantplaner/issues"

[project.scripts]
variantplaner = "variantplaner.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]
