[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "variantplaner"
description = "A tool kit to manage many variant on desktop computer"
authors = [{name = "Pierre Marijon", email = "pierre.marijon-ext@aphp.fr"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1",
    "polars-u64-idx>=1",
    "click>=8",
    "typing-extensions>=4",
    "variantplaner-rs @ file:///${PROJECT_ROOT}/variantplaner_rs",
]

[project.urls]
Homepage = "https://seqoia-it.github.io/variantplaner"
Documentation = "https://seqoia-it.github.io/variantplaner"
Changelog = "https://seqoia-it.github.io/variantplaner/changelog"
Repository = "https://github.com/SeqOIA-IT/variantplaner"
Issues = "https://github.com/SeqOIA-IT/variantplaner/issues"

[project.scripts]
variantplaner = "variantplaner.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]

[tool.uv]
dev-dependencies = [
    # dev
    "editables>=0.5",

    # maintenance
    "build>=1",
    "git-changelog>=2",
    "twine>=6",

    # ci
    "duty>=1",
    "ruff>=0.9",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-randomly>=3",
    "pytest-xdist>=3",
    "mypy>=1",
    "types-markdown>=3",
    "types-pyyaml>=6",

    # docs
    "markdown-callouts>=0.4",
    "markdown-exec>=1",
    "mkdocs>=1",
    "mkdocs-coverage>=1",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.27",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2; python_version < '3.11'",
]
