[package]
name = "variantplaner_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "variantplaner_rs"
crate-type = ["cdylib"]

[dependencies]
rustc-hash  = { version = "1" }

polars = { version = "0.34.2", default-features = false, features = ["fmt", "dtype-full"] }
polars-plan = { version = "0.34.2", default-feautres = false }
pyo3        = { version = "0.20", features = ["extension-module"] }
pyo3-polars = { version = "0.8", features = ["derive"] }

jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
