[package]
name = "variantplaner_rs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "variantplaner_rs"
crate-type = ["cdylib"]

[dependencies]
# hashing
ahash        = { version = "0.8",  features = ["no-rng"] }

# polars thing
polars       = { version = "0.40", default-features = false, features = ["fmt", "dtype-date", "timezones"] }
pyo3         = { version = "0.21", features = ["extension-module"] }
pyo3-polars  = { version = "0.14",  features = ["derive", "lazy"] }
jemallocator = { version = "0.5",  features = ["disable_initial_exec_tls"] }
